@@ -991,11 +991,11 @@ dumpMoon (FILE *out, const PLANET_DESC *moon)
 {
 	const char *typeStr;
 	
-	if (moon->data_index == (BYTE) ~0)
+	if (moon->data_index == HIERARCHY_STARBASE)
 	{
 		typeStr = "StarBase";
 	}
-	else if (moon->data_index == (BYTE) (~0 - 1))
+	else if (moon->data_index == SA_MATRA)
 	{
 		typeStr = "Sa-Matra";
 	}
@@ -1014,13 +1014,11 @@ dumpWorld (FILE *out, const PLANET_DESC *world)
 {
 	PLANET_INFO *info;
 	
-	if (world->data_index == (BYTE) ~0) {
-		// StarBase
+	if (world->data_index == HIERARCHY_STARBASE) {
 		return;
 	}
 	
-	if (world->data_index == (BYTE)(~0 - 1)) {
-		// Sa-Matra
+	if (world->data_index == SA_MATRA) {
 		return;
 	}
 
@@ -1240,13 +1238,11 @@ tallyMoonCallback (const PLANET_DESC *moon, void *arg)
 static void
 tallyResourcesWorld (TallyResourcesArg *arg, const PLANET_DESC *world)
 {
-	if (world->data_index == (BYTE) ~0) {
-		// StarBase
+	if (world->data_index == HIERARCHY_STARBASE) {
 		return;
 	}
 	
-	if (world->data_index == (BYTE)(~0 - 1)) {
-		// Sa-Matra
+	if (world->data_index == SA_MATRA) {
 		return;
 	}
 
